stop overlap between icon and bubble
this is how speech bubbles tend to work - with a gap between the bubble
and the 'speaker'

--- a/src/apps/ts-application.css
+++ b/src/apps/ts-application.css
@@ -27,7 +27,7 @@ a.app-picker:hover {
 	position: absolute;
 	z-index: 1000;
 	right: 10px;
-	top: 40px;
+	top: 52px;
 }
 
 .bubble .description {
